Animation of font-size with rem values is incorrect https://bugs.webkit.org/show_bug.cgi?id=194765 <rdar://problem/48171742>

Reviewed by Antoine Quint.

Source/WebCore:

Test: animations/keyframe-rem-unit.html

'rem' computation fails on first style resolution because the document element style is not available.

* style/StyleResolver.cpp:
(WebCore::Style::Resolver::styleForKeyframe):

Provide the override value, needed because the style can't be found from DOM tree yet.

LayoutTests:

* animations/keyframe-rem-unit-expected.html: Added.
* animations/keyframe-rem-unit.html: Added.


Canonical link: https://commits.webkit.org/224951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261861 268f45cc-cd09-0410-ab3c-d52691b4dbfc